--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,12 +41,33 @@ services:
           memory: 512M
           cpus: "2"
 
+  postgres:
+    image: postgres:12-alpine
+    environment:
+      - POSTGRES_DB=temporal
+      - POSTGRES_USER=temporal
+      - POSTGRES_PASSWORD=temporal
+    volumes:
+      - temporal_db:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U temporal"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   temporal:
     image: temporalio/auto-setup:latest
     ports:
       - "7233:7233"
     environment:
-      - DB=sqlite
+      - DB=postgres12
+      - DB_PORT=5432
+      - POSTGRES_USER=temporal
+      - POSTGRES_PWD=temporal
+      - POSTGRES_SEEDS=postgres
+    depends_on:
+      postgres:
+        condition: service_healthy
     volumes:
       - temporal_data:/etc/temporal/data
     healthcheck:
@@ -91,3 +112,5 @@ services:
 volumes:
   tokenhub_data:
   temporal_data:
+
+  temporal_db:
